try to fix overlapped buttons

--- a/src/less/disasters.less
+++ b/src/less/disasters.less
@@ -10,11 +10,11 @@
   background-image: url("/../assets/4_Photo.png");
   background-position: center center;
   background-size: 100% 100%;
-  height: 750px;
-  margin-top: -200px;
-  margin-bottom: -200px;
+  height: 1000px;
+  margin-top: -240px;
+  margin-bottom: -240px;
   position: relative;
-  z-index: 2;
+  z-index: 1;
 }
 
 .disasters__layout {
@@ -22,9 +22,11 @@
 }
 
 .disasters__text {
-  max-width: 500px;
+  max-width: 800px;
   align-self: center;
   text-align: center;
   color: #ffffff;
   font-weight: bold;
+  font-size: 40px;
+  line-height: 1.3;
 }
