--- a/src/less/index.less
+++ b/src/less/index.less
@@ -23,13 +23,12 @@ body {
   padding: 0;
   margin: 0;
   font-size: 18px;
-  //line-height: 1.4;
+  line-height: 1.45;
 }
 
 ul {
   margin: 0;
   padding: 0;
-  //list-style: none;
   list-style-type: none;
 }
 
