--- a/src/less/plan.less
+++ b/src/less/plan.less
@@ -7,9 +7,7 @@
   background-image: url("/../assets/5_Graphic.png");
   background-position: top center;
   background-size: 100%;
-  position: relative;
-  z-index: 1;
-  padding: @pad*75 0;
+  padding: (300px - 30px) 0;
 }
 
 .plan__layout {
@@ -83,5 +81,5 @@
 
 .plan__benefits-item-content-text {
   color: @gray;
-  line-height: 1.5;
+  line-height: 1.45;
 }
